# HPC_Plateform_Simulation

./: CMakeLists.txt  Makefile  README.md  config.txt
data/: InputDataExample.txt
include/: AbstractJob.h  AbstractScheduler.h  AbstractSimulator.h  Curriculum.h  GpuNode.h  Group.h  HPCSimulator.h  JobsSizes.h  ListQueue.h  Node.h  Queue.h  Researcher.h  Simulator.h  Student.h  User.h  random.h  weekendEvent.h
src/: AbstractJob.cpp  AbstractScheduler.cpp  AbstractSimulator.cpp  GpuNode.cpp  HPCSimulator.cpp  JobsSizes.cpp  Node.cpp  Queue.cpp  Researcher.cpp  Simulator.cpp  Student.cpp  User.cpp  factorial.cpp  main.cpp  weekendEvent.cpp
tests/: CMakeLists.txt  factorial-test.cpp
